# pompiliusd

./: .gitignore  Cargo.toml  install.sh  uninstall.sh
src/: cache.rs  entities.rs  error.rs  json_result.rs  lib.rs  main.rs  rclone_api.rs  setup_conf_dir.rs  zbus_error.rs
