[package]
name = "pompiliusd"
version = "0.1.0"
edition = "2024"

[dependencies]
zbus = { version = "5.14.0" , features = ["tokio"] }
tokio = {version = "1.52.1", features = ["full"]}
serde = { version="1.0.228", features=["derive"] }
serde_json = "1.0.141"
anyhow = "1.0.102"
reqwest = { version = "0.13.2", features = ["json"] }
thiserror = "2.0.18"
toml = "0.8"
dirs = "5"

[lints.rust]
unsafe_code = "forbid"
